<?xml version="1.0"?>
<package format="2">
  <name>tms_db_manager</name>
  <version>1.0.2</version>
  <description>The tms_db_manager package</description>

  <maintainer email="kawamura@ait.kyushu-u.ac.jp">Akihiro Kawamura</maintainer>

  <license>BSD</license>

  <url type="website">http://irvs.github.io/ros_tms/</url>
  <url type="repository">https://github.com/irvs/ros_tms</url>
  <url type="bugtracker">https://github.com/irvs/ros_tms/issues</url>

  <author email="sms0432@irvs.ait.kyushu-u.ac.jp">Minsoo Song</author>
  <author email="kiyoyama@irvs.ait.kyushu-u.ac.jp">Kouhei Kiyoyama</author>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tms_msg_db</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tms_msg_db</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
