<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tms_sp_machine</name>
  <version>0.0.0</version>
  <description>The tms_sp_machine_odom package</description>

  <maintainer email="kasahara.yuichiro.res@gmail.com">Yuichiro Kasahara</maintainer>

  <license>Apache License, Version 2.0</license>

  <url type="website">http://irvs.github.io/ros_tms/</url>
  <url type="repository">https://github.com/irvs/ros2_tms_for_construction</url>
  <url type="bugtracker">https://github.com/irvs/ros2_tms_for_construction/issues</url>

  <author email="maeda@irvs.ait.kyushu-u.ac.jp">Ryuichi Maeda</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>

  <build_depend>tms_msg_db</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
