<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tms_ss_terrain_static</name>
  <version>0.0.0</version>
  <description>The tms_ss_terrain_static package</description>

  <maintainer email="maeda@ait.kyushu-u.ac.jp">Ryuichi Maeda</maintainer>

  <license>BSD</license>

  <url type="website">http://irvs.github.io/ros_tms/</url>
  <url type="repository">https://github.com/irvs/ros2_tms_for_construction</url>
  <url type="bugtracker">https://github.com/irvs/ros2_tms_for_construction/issues</url>
  
  <author email="maeda@irvs.ait.kyushu-u.ac.jp">Ryuichi Maeda</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>tms_msg_db</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
