<?xml version="1.0"?>
<package format="3">
  <name>tms_ss_vicon</name>
  <version>1.0.2</version>
  <description>The tms_ss_vicon package</description>

  <maintainer email="kawamura@ait.kyushu-u.ac.jp">Akihiro Kawamura</maintainer>

  <license>BSD</license>

  <url type="website">http://irvs.github.io/ros_tms/</url>
  <url type="repository">https://github.com/irvs/ros_tms</url>
  <url type="bugtracker">https://github.com/irvs/ros_tms/issues</url>

  <author email="song@irvs.ait.kyushu-u.ac.jp">Minsoo Song</author>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <build_depend>rclcpp</build_depend>
  <build_depend>tms_msg_ss</build_depend>
  <build_depend>tms_msg_db</build_depend>
  <build_depend>visualization_msgs</build_depend>


  <build_export_depend>viconSDK</build_export_depend>
  <build_export_depend>ViconDataStreamSDK_CPP</build_export_depend>
  <build_export_depend>vicon_stream</build_export_depend>
  <build_export_depend>tms_msg_ss_generate_messages_cpp</build_export_depend>
  <build_export_depend>tms_msg_db_generate_messages_cpp</build_export_depend>



  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tms_msg_ss</exec_depend>
  <exec_depend>tms_msg_db</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
