<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tms_ts_launch</name>
  <version>1.0.0</version>
  <license>Apache License, Version 2.0</license>
  <description>The tms_ts_launch package</description>

  <maintainer email="kasahara@irvs.ait.kyushu-u.ac.jp">Yuichiro Kasahara</maintainer>

  <url type="repository">https://github.com/irvs/ros2_tms_for_construction</url>
  <url type="bugtracker">https://github.com/irvs/ros2_tms_for_construction/issues</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  
  <exec_depend>amnt_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
