<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tms_ts_manager</name>
  <version>1.0.0</version>
  <license>Apache License, Version 2.0</license>
  <description>The tms_ts_manager package</description>

  <maintainer email="kasahara@irvs.ait.kyushu-u.ac.jp">Yuichiro Kasahara</maintainer>

  <url type="website">http://irvs.github.io/ros_tms/</url>
  <url type="repository">https://github.com/irvs/ros2_tms_for_construction</url>
  <url type="bugtracker">https://github.com/irvs/ros2_tms_for_construction/issues</url>

  <author email="itsuka@irvs.ait.kyushu-u.ac.jp">Tomoya Itsuka</author>
  <author email="kawamura@ait.kyushu-u.ac.jp">Akihiro Kawamura</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
